--- a/src/app/stdin/stdin.component.html
+++ b/src/app/stdin/stdin.component.html
@@ -30,7 +30,16 @@
                 (click)="updateStudent()"/>
         </td>
     </tr> 
-    
+    <tr>
+        <td>
+            <input type="button" value="Add Student"  
+                (click)="AddStudent()"/>
+        </td>
+        <td>
+            <input type="button" value="Update Student"  
+                (click)="updateStudent()"/>
+        </td>
+    </tr> 
 </table>
 <table border="1">
     <td>Name:</td>
