--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
 <app-stdin></app-stdin>
+<tr>
+    <td>
+        <input type="button" value="Add Student"  
+            (click)="AddStudent()"/>
+    </td>
+    <td>
+        <input type="button" value="Update Student"  
+            (click)="updateStudent()"/>
+    </td>
+</tr> 
